# GovWhiz

./: .coverage  .gitignore  AI-UPDATE-SYSTEM.md  API_SETUP.md  ATTRACTIVE-HARMONIOUS-DESIGN-SUMMARY.md  BACKEND_SETUP.md  BUG-FIXES-SUMMARY.md  CIVIC-ENGAGEMENT-REDESIGN-SUMMARY.md  COMPLETE-FIXES-SUMMARY.md  COMPREHENSIVE-FIXES-SUMMARY.md  CONTRIBUTING.md  DASHBOARD-BUTTON-FIXES.md  DESIGN-CONSISTENCY-FIXES.md  ENHANCED-FEATURES.md  FREE_MP_LOOKUP_GUIDE.md  MODERN-DESIGN-TRANSFORMATION.md  MP-LOOKUP-FIX-SUMMARY.md  NEWS_SCRAPER_README.md  PREMIUM-DESIGN-IMPROVEMENTS.md  PROJECT-CLEANUP-SUMMARY.md  README.md  REGRESSION-ANALYSIS.md  RESTORATION-PROGRESS-REPORT.md  SECURITY.md  UK-GOVERNMENT-REDESIGN-SUMMARY.md  advanced-search.js  app.py  app.yaml  app_enhanced.py  app_new.py  auto-updater.js  batch_postcode_processor.py  config.json  constituency_lookup.py  contact_handler.py  data-visualization.js  debug-mp-lookup.html  download_members.py  enhanced_contact_handler.py  fetch_news.py  (+60 more)
.circleci/: config.yml
.github/: dependabot.yml
api/: mp_updater_service.py
css/: mp-lookup-enhanced.css
data/: cleaned_mps.json  constituency_cache.json  constituency_data.json  constituency_lookup.json  latest-news.json  latest_news.json  members.json  mp_database.json  mp_lookup_cache.json  mp_lookup_data.json  production_mp_cache.json  streamlined_mp_data.json
js/: api-client.js  contact-form-enhanced.js  contact-form.js  contact-handler.js  error-tracker.js  government-services.js  lords-lookup.js  modern-effects.js  mp-actions.js  mp-lookup-enhanced.js  mp-lookup.js  (+10 more)
(+48 files in other folders)
